--- a/src/components/Clicky/Clicky.css
+++ b/src/components/Clicky/Clicky.css
@@ -29,21 +29,10 @@
 
 .card > .content > ul {
   list-style-type: none;
+  padding: 0px;
 }
 
 .card > .content > ul > li {
   margin-top: 18px;
-}
-
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
+  text-align: center;
 }
